client/src/app.scss
/* ... */
.all-nodes {
  flex: 1 1 0;
  padding: .25rem 0;
  margin: .25rem 0;
  overflow-y: auto;
}

.file-node, .folder-node {
  padding: .4rem .25rem .4rem $node-start-offset;

  &:hover {
    background-color: $black;

    .file-action {
      display: inline-block;
    }
  }

  &.active {
    background-color: $gray-700;
    color: $white;
  }

  .fas, .far, .fal, .fab {
    margin-left: .25rem;
    margin-right: .25rem;
  }
}

.file-action {
  display: none;
  color: $gray-600;

  &:hover {
    color: $white;
  }
}

@for $i from 0 through 8 {
  .nested-file-node-#{$i} {
    .file-node, .folder-node {
      padding-left: $node-start-offset + $node-offset * ($i + 1);
    }
  }
}

.file-navigator {
  flex: 1 1 auto;
  overflow: hidden;
  -webkit-overflow-scrolling: touch;
  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
}

.tab {
  flex: 0 1 auto;
  align-self: stretch;
  padding: 0 1rem;
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  color: $gray-600;
  white-space: nowrap;
  vertical-align: middle;

  span {
    flex: 0 1 auto;
    line-height: 1;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  &:hover {
    background-color: $black;

    .close-file {
      visibility: visible;
    }
  }

  &.active {
    background-color: $gray-800;
    color: $gray-400;

    .close-file {
      visibility: visible;
      color: $gray-500;

      &:hover {
        color: $white;
      }
    }
  }

  .close-file {
    visibility: hidden;
    margin-left: .5rem;
    color: $gray-700;

    &:hover {
      color: $white;
    }
  }
}

.can-drop {
  background-color: $black;
  box-shadow: inset 0 0 0 1px $blue;

  > .folder-node > .node-title {
    transform: scale(1.05);

    > .node-name {
      text-decoration: underline;
    }
  }

  @for $i from 0 through 8 {
    .nested-file-node-#{$i} {
      opacity: .3;
    }
  }
}

.node-title {
  flex: 1 1 auto;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  &.bcx-dnd-preview {
    background-color: $gray-900;
    color: $gray-300;
  }
}

#toast-container.toast-top-center > div {
  @media (min-width: $tiny) {
    width: 25rem;
  }

  @media (max-width: $tiny - .02) {
    width: 100%;
  }

  opacity: 1;
  padding: 1rem;
  box-shadow: none !important;
  border-radius: 0;
}

#toast-container > .toast {
  background-image: none !important;
  display: flex;
  flex-wrap: nowrap;
  align-items: center;

  .toast-message {
    flex: 1 1 auto;
  }

  &::before {
    flex: 0 0 auto;
    font-family: 'Font Awesome 5 Free';
    font-weight: 900;
    font-size: 24px;
    line-height: 1;
    color: #FFF;
    margin-right: 1rem;
  }

  &.toast-warning::before {
    content: "\f071";
  }

  &.toast-error::before {
    content: "\f06a";
  }

  &.toast-info::before {
    content: "\f05a";
  }

  &.toast-success::before {
    content: "\f058";
  }
}

.context-overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.context-menu {
  position: fixed;
  border-radius: $border-radius;
  padding: .25rem 0;
  color: $gray-200;

  background-color: $gray-900;
  box-shadow: 0 0 0 1px $gray-700;

  .context-menu-item {
    padding: .25rem 1rem;

    &.context-menu-item-action {
      cursor: pointer;

      &.danger {
        color: $red;
      }
    }

    &.context-menu-item-action:hover {
      background-color: $cyan-dark;
      color: $white !important;
    }

    &.context-menu-item-separator {
      padding: 0;
      margin: .25rem 0;
      border-bottom: 1px solid $gray-800;
    }

    a {
      text-decoration: none;
      color: $gray-200;

      &:visited, &:hover {
        text-decoration: none;
      }

      &:visited {
        color: $gray-200;
      }

      &:hover {
        color: $white;
      }
    }
  }
}

input[type='text'] {
  border: 0;
  border-radius: $border-radius;
  padding: .4rem;
  vertical-align: middle;
  background-color: $gray-500;

  &:focus {
    background-color: $gray-100;
    outline: none;

    &::placeholder {
      color: $gray-600;
    }
  }

  &::placeholder {
    color: $gray-700;
  }
}

.browser-frame {
  flex: 1 0 0;
  display: block;
  position: relative;

  .iframe {
    display: block;
    background-color: #fff;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: 0;
    outline: 0;
  }

  .dnd-helper {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
  }

  .error {
    display: block;
    padding: .5rem;
    color: $red;
    overflow-y: auto;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    user-select: auto;
  }
}

.browser-dev-tools {
  position: relative;
  flex: 0 0 auto;
  display: block;
  flex-wrap: nowrap;
  flex-direction: column;
  align-items: stretch;
}

.dev-details-panel {
  position: relative;

  .dev-details {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: stretch;
    user-select: auto;

    .logs-control-bar {
      flex: 0 0 auto;
      padding: .25rem;
      // border-bottom: 1px solid $gray-800;
      display: flex;
      align-items: center;
    }

    .logs {
      flex: 1 0 0;
      overflow-y: auto;
      background-color: $gray-1000;

      .log-line {
        display: block;
        padding: .25rem .5rem;
        font-size: .9rem;

        &:not(:last-child) {
          border-bottom: 1px dashed $gray-800;
        }

        > .fas, > .far, > .fal, > .fab {
          width: 1.4rem;
          text-align: center;
        }
      }
    }
  }
}

.bg-cyan {
  background-color: $cyan !important;
}

.bg-black {
  background-color: $black !important;
}

.bg-dark {
  background-color: $charcoal !important;
}

.bg-light {
  background-color: $gray-200 !important;
}

.bg-muted {
  background-color: $gray-600 !important;
}

.bg-primary {
  background-color: $blue !important;
}

.bg-success {
  background-color: $green !important;
}
/* ... */

